feat: Add Stripe payment integration foundation
- Installed @stripe/stripe-js and stripe packages
- Created Stripe initialization library (src/lib/stripe.js)
- Added Stripe environment variables to .env.example
- Created database schema for Stripe columns (ADD_STRIPE_COLUMNS.sql)
- Created comprehensive STRIPE_SETUP_GUIDE.md
- Created STRIPE_IMPLEMENTATION_STATUS.md tracking progress

Next steps require:
- Stripe account setup
- Product and price creation
- Environment variables configuration
- Database schema update

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,6 @@ VITE_SUPABASE_ANON_KEY=your-anon-key-here
 # AI Configuration
 VITE_GEMINI_API_KEY=your-gemini-api-key-here
 
-# Optional: Stripe (if implementing payments)
-# VITE_STRIPE_PUBLISHABLE_KEY=pk_test_...
-# STRIPE_SECRET_KEY=sk_test_...
+# Stripe Configuration (for payments)
+VITE_STRIPE_PUBLISHABLE_KEY=pk_test_your_publishable_key_here
+VITE_STRIPE_PRICE_ID=price_your_price_id_here
