--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^8.4.0",
     "@supabase/supabase-js": "^2.81.1",
     "jspdf": "^3.0.3",
     "jspdf-autotable": "^5.0.2",
@@ -17,6 +18,7 @@
     "pdfjs-dist": "^5.4.394",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "stripe": "^19.3.1",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
