--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,17 @@
 {
+
+  "functions": {
+
+    "api/stripe-webhook.js": {
+
+      "memory": 1024,
+
+      "maxDuration": 10
+
+    }
+
+  },
+{
   "rewrites": [
     {
       "source": "/(.*)",
