--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,5 @@
+```json
+
 {
 
   "functions": {
@@ -11,11 +13,19 @@
     }
 
   },
-{
+
   "rewrites": [
+
     {
-      "source": "/(.*)",
-      "destination": "/index.html"
+
+      "source": "/api/stripe-webhook",
+
+      "destination": "/api/stripe-webhook.js"
+
     }
+
   ]
+
 }
+
+```
